# onnx-sentiment-analysis

./: Dockerfile  README.md  pyproject.toml
app/: app.py
web/: index.html  script.js  styles.css
